workspace/MJCompiler/test/syntaxerrors/ifconditions.mj
program ifconditions 
	char slovoa;
	int x, y, z;
	int i;
	const int jedan=1, dva=2, tri=3;
{
	void main() {
	 i = 0;
	 x = dva * tri - jedan;
	 if( x > > slovoa){
	 		x = 1;
	 } else if ( x>y){
	  y = x/2;
	 }
	 else if (x != z x || x==i){
	 x++;
	 }
	}
}